# langchain-ai-assistant-hands-on

./: LICENSE  README.md  colab-ngrok.ipynb  colab.ipynb  pyproject.toml
app/: pyproject.toml  streamlit_app.py
cloudserver/: .env.template  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  room.py  test.sh  turn_light.sh
cloudserver/app/: main.py  room.py
docs/: conceptual-model.drawio  context-diagram.drawio  design.drawio  features.md  usecase.drawio
picow/: .gitignore  README.md  check.py  check_lights.py  env.py.template  main.py
raspberry_pi/: main.py
raspberrypi/: README.md  main.py  pico.py
steps/: azure_openai.md  cloud9.md  extra.md  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md
webapp/: .tool-versions  Dockerfile  Makefile  README.md  agent_app.py  customtools.py  pyproject.toml  requirements.txt  streamlit_app.py
